@@ -58,14 +58,127 @@ import sys
 import logging
 logger = logging.getLogger('MDAnalysis.analysis.align')
 
-def rmsd(a,b):
-    """Returns RMSD between two coordinate sets a and b."""
-    return numpy.sqrt(numpy.sum(numpy.power(a-b,2))/a.shape[0])
-
 def echo(s=''):
     """Simple string output that immediately prints to the console."""
     sys.stderr.write(s)
     sys.stderr.flush()
+
+def rmsd(a,b):
+    """Returns RMSD between two coordinate sets *a* and *b*.
+
+    *a* and *b* are arrays of N atoms of shape N*3 as generated by, e.g.,
+    :meth:`MDAnalysis.core.AtomGroup.AtomGroup.coordinates`.
+
+    Example::
+     >>> u = Universe(PSF,DCD)
+     >>> bb = u.selectAtoms('backbone')
+     >>> A = bb.coordinates()  # coordinates of first frame
+     >>> u.trajectory[-1]      # forward to last frame
+     >>> B = bb.coordinates()  # coordinates of last frame
+     >>> rmsd(A,B)
+     6.8342494129169804
+    """
+    #return numpy.sqrt(numpy.sum(numpy.power(a-b,2))/a.shape[0])
+    return qcp.CalcRMSDRotationalMatrix(a.T.astype(numpy.float64),b.T.astype(numpy.float64), 
+                                        a.shape[0], None, None)
+
+def rotation_matrix(a,b, weights=None):
+    """Returns the 3x3 rotation matrix for RMSD fitting coordinate sets *a* and *b*.
+
+    The rotation matrix transforms *a* to overlap with *b* (i.e. *b* is the
+    reference structure):
+ 
+       b = R.a
+
+    *R* can be used as an argument for
+    :meth:`MDAnalysis.core.AtomGroup.AtomGroup.rotate` to generate a rotated
+    selection, e.g. ::
+
+      >>> R = rotation_matrix(A.selectAtoms('backbone').coordinates(), B.selectAtoms('backbone').coordinates())
+      >>> A.atoms.rotate(R)
+      >>> A.atoms.write("rotated.pdb")
+
+    Note that the function does *not* shift the centers of mass or geometry;
+    this needs to be done by the user.
+
+    :Arguments:
+       *a*  
+          coordinates that are to be rotated ("mobile set"); array of N atoms
+          of shape N*3 as generated by, e.g.,
+          :meth:`MDAnalysis.core.AtomGroup.AtomGroup.coordinates`.
+       *b*
+          reference coordinates; array of N atoms of shape N*3 as generated by,
+          e.g., :meth:`MDAnalysis.core.AtomGroup.AtomGroup.coordinates`.
+       *weights*
+          array of floats of size N for doing weighted RMSD fitting (e.g. the
+          masses of the atoms)
+
+    :Returns: ``(R, rmsd)`` rmsd and rotation matrix *R*    
+
+    .. SeeAlso:: :func:`rmsd` calculates the RMSD between *a* and *b*; for
+                 fitting a whole trajectory it is more efficient to use
+                 :func:`rms_fit_trj`. A complete fit of two structures can be
+                 done with :func:`alignto`.
+    """
+    rot = numpy.zeros(9, dtype=numpy.float64)
+    rmsd = qcp.CalcRMSDRotationalMatrix(a.T.astype(numpy.float64), b.T.astype(numpy.float64),
+                                        b.shape[0], rot, weights)
+    return numpy.matrix(rot.reshape(3,3)), rmsd
+
+def alignto(mobile, ref, select="backbone", mass_weighted=False):
+    """Align *mobile* to *target* by doing a RMSD fit on *selection*.
+
+    1. A rotation matrix is computed that minimizes the RMSD between the
+       coordinates of `mobile.selectAtoms(sel1)` and `ref.selectAtoms(sel2)`
+       (and shifts the centres of mass to compute the pure rotation)
+    2. All atoms in the **Universe** that contains *mobile* are shifted 
+       and rotated.
+    
+    :Arguments:
+      *mobile*
+         structure to be aligned, a :class:`~MDAnalysis.AtomGroup.AtomGroup` 
+      *ref*
+         reference structure, a :class:`~MDAnalysis.AtomGroup.AtomGroup` 
+      *select*
+         - any valid selection string for
+           :meth:`MDAnalysis.AtomGroup.selectAtoms` that produces identical
+           selections in *traj* and *ref*; or 
+         - dictionary ``{'target':sel1, 'reference':sel2}``.  
+           The :func:`fasta2select` function returns such a
+           dictionary based on a ClustalW_ or STAMP_ sequence alignment.
+         - tuple ``(sel1, sel2)``
+
+    :Returns: RMSD before and after spatial alignment.
+    """
+    if type(select) is str:
+        select = {'reference':select,'target':select}
+    elif type(select) is tuple:
+        select = {'reference':select[0],'target':select[1]}
+    mobile_atoms = mobile.selectAtoms(select['target'])
+    ref_atoms = ref.selectAtoms(select['reference'])
+    if mass_weighted:
+        masses = ref_atoms.masses()
+        ref_com = ref_atoms.centerOfMass()
+        mobile_com = mobile_atoms.centerOfMass()
+    else:
+        masses = None
+        ref_com = ref_atoms.centerOfGeometry()
+        mobile_com = mobile_atoms.centerOfGeometry()
+
+    ref_coordinates = ref_atoms.coordinates() - ref_com
+    mobile_coordinates = mobile_atoms.coordinates() - mobile_com
+
+    old_rmsd = rmsd(mobile_atoms.coordinates(), ref_atoms.coordinates())
+
+    R, new_rmsd = rotation_matrix(mobile_coordinates, ref_coordinates, weights=masses)
+
+    atoms = mobile.universe.atoms
+    atoms.translate(-mobile_com)
+    atoms.rotate(R)
+    atoms.translate(ref_com)
+
+    return old_rmsd, new_rmsd
+    
 
 def rms_fit_trj(traj, ref, select='backbone', filename=None, rmsdfile=None, prefix='rmsfit_',
                 mass_weighted=False, tol_mass=0.1):
@@ -93,6 +206,8 @@ def rms_fit_trj(traj, ref, select='backbone', filename=None, rmsdfile=None, pref
          file name for writing the RMSD timeseries [``None``]
       *prefix*
          prefix for autogenerating the new output filename
+      *mass_weighted*
+         do a mass-weighted RMSD fit
       *tol_mass*
          Reject match if the atomic masses for matched atoms differ by more than
          *tol_mass* [0.1]
@@ -198,24 +313,30 @@ def rms_fit_trj(traj, ref, select='backbone', filename=None, rmsdfile=None, pref
     # R: rotation matrix that aligns r-r_com, x~-x~com   
     #    (x~: selected coordinates, x: all coordinates)
     # Final transformed traj coordinates: x' = (x-x~_com)*R + ref_com
+    rot = numpy.zeros(9,dtype=numpy.float64)      # allocate space for calculation
+    R = numpy.matrix(rot.reshape(3,3))
     for k,ts in enumerate(frames):
         # shift coordinates for rotation fitting
         # selection is updated with the time frame
         x_com = traj_atoms.centerOfMass().astype(numpy.float32)
         traj_coordinates[:] = traj_atoms.coordinates() - x_com
 
-        R = numpy.zeros((9,),dtype=numpy.float64)
         # Need to transpose coordinates such that the coordinate array is
         # 3xN instead of Nx3. Also qcp requires that the dtype be float64
-        rmsd[k] = qcp.CalcRMSDRotationalMatrix(ref_coordinates.T.astype('float64'),
-                                               traj_coordinates.T.astype('float64'),
-                                               natoms, R, weight)
-        R = numpy.matrix(R.reshape(3,3))
+        # (I think we swapped the position of ref and traj in CalcRMSDRotationalMatrix 
+        # so that R acts **to the left** and can be broadcasted; we're saving
+        # one transpose. [orbeckst])
+        rmsd[k] = qcp.CalcRMSDRotationalMatrix(ref_coordinates.T.astype(numpy.float64),
+                                               traj_coordinates.T.astype(numpy.float64),
+                                               natoms, rot, weight)
+        R[:,:] = rot.reshape(3,3)
 
-        # Transform each atom in the trajectory (use inplace ops to avoid copying arrays)
+        # Transform each atom in the trajectory (use inplace ops to avoid copying arrays)        
+        # (Marginally (~3%) faster than "ts._pos[:] = (ts._pos - x_com) * R + ref_com".)
         ts._pos   -= x_com
         ts._pos[:] = ts._pos * R # R acts to the left & is broadcasted N times.
         ts._pos   += ref_com
+        
         writer.write(traj.atoms) # write whole input trajectory system
         # for debugging:
         # rmsd_old = rmsd(ref_atoms.coordinates(),traj_coordinates)
